--- a/paper/references.bib
+++ b/paper/references.bib
@@ -72,3 +72,38 @@
 	journal = {Communications of the ACM},
 	doi = {10.1145/2699407}
 }
+@article{lambda_cube,
+	title={Introduction to generalized type systems},
+	volume={1},
+	DOI={10.1017/S0956796800020025},
+	number={2},
+	journal={Journal of Functional Programming},
+	publisher={Cambridge University Press},
+	author={Barendregt, Henk},
+	year={1991},
+	pages={125–154}
+}
+@incollection{ITT,
+	title = {Constructive Mathematics and Computer Programming},
+	editor = {L. Jonathan Cohen and Jerzy Łoś and Helmut Pfeiffer and Klaus-Peter Podewski},
+	series = {Studies in Logic and the Foundations of Mathematics},
+	publisher = {Elsevier},
+	volume = {104},
+	pages = {153-175},
+	year = {1982},
+	booktitle = {Logic, Methodology and Philosophy of Science VI},
+	issn = {0049-237X},
+	doi = {https://doi.org/10.1016/S0049-237X(09)70189-2},
+	url = {https://www.sciencedirect.com/science/article/pii/S0049237X09701892},
+	author = {Per Martin-Löf}
+}
+@article{debrujin_index,
+	title = {Lambda calculus notation with nameless dummies, a tool for automatic formula manipulation, with application to the {Church}-{Rosser} theorem},
+	volume = {75},
+	doi = {10.1016/1385-7258(72)90034-0},
+	number = {5},
+	journal = {Indagationes Mathematicae (Proceedings)},
+	author = {de Bruijn, N.G},
+	year = {1972},
+	pages = {381--392}
+}
